# src/presentation/routes/category.routes.ts/category.route.ts
@@ -1,34 +1,28 @@
 import { Router } from 'express';
-import { CategoryController } from '../controllers/category.controller';
+import { CategoryController } from '../../controllers/category.controller';
 import {
     validateCategory,
     validateCategoryId,
     validateUpdateCategory
-} from '../validation/category.validators';
+} from '../../validation/category.validators';
+
 
 
 const categoryRouters = (categoryController: CategoryController): Router => {
     const router = Router();
 
-    router.get("/",
-        categoryController.getAllCategory.bind(categoryController),
-    );
-
-    router.post("/create",
+    router.post("/",
         validateCategory,
         categoryController.createCategory.bind(categoryController)
     );
 
-    router.delete("/delete",
+    router.delete("/:categoryId",
         validateCategoryId,
         categoryController.deleteCategory.bind(categoryController)
     );
-    router.put("/update",
+    router.put("/:categoryId",
         validateUpdateCategory,
         categoryController.updateCategory.bind(categoryController)
-    );
-    router.get("/:categoryId",
-        categoryController.getSingleCategory.bind(categoryController)
     );
 
     return router;
