# src/presentation/routes/category.routes.ts/public-category.route.ts
@@ -1,0 +1,20 @@
+import { Router } from 'express';
+import { CategoryController } from '../../controllers/category.controller';
+
+
+const publicCategoryRouters = (categoryController: CategoryController): Router => {
+    const router = Router();
+
+    router.get("/",
+        categoryController.getAllCategory.bind(categoryController),
+    );
+
+    router.get("/:categoryId",
+        categoryController.getSingleCategory.bind(categoryController)
+    );
+
+    return router;
+
+}
+
+export default publicCategoryRouters;
