# src/presentation/server.ts
@@ -1,15 +1,16 @@
-import cookieParser from 'cookie-parser';
 import express, { Express } from "express";
 import { CONFIG } from "./config/env";
 import authRoutes from './routes/auth.route';
 import { setupDependencies } from './dependencies';
-import productRouters from './routes/product.route';
-import categoryRouters from './routes/category.route';
 import { authMiddleware } from './middleware/auth.middleware';
 import cors from 'cors';
 import swaggerUi from 'swagger-ui-express';
 import swaggerSpec from './config/swagger';
 import { corsOptions } from './config/corsOptions';
+import publicCategoryRouters from './routes/category.routes.ts/public-category.route';
+import categoryRouters from './routes/category.routes.ts/category.route';
+import productRouters from './routes/product.routes.ts/product.route';
+import publicProductRoutes from "./routes/product.routes.ts/public-product.route";
 
 export default class Server {
     private app: Express;
@@ -27,9 +28,10 @@ export default class Server {
     private setupRoutes() {
         this.app.use(cors(corsOptions));
         this.app.use('/api/auth', authRoutes(this.container.authController));
-        this.app.use('/api/product', productRouters(this.container.productController));
-        this.app.use('/api/category', categoryRouters(this.container.categoryController));
-
+        this.app.use('/api/user/product', productRouters(this.container.productController));
+        this.app.use('/api/product', publicProductRoutes(this.container.productController));
+        this.app.use('/api/user/category', categoryRouters(this.container.categoryController));
+        this.app.use('/api/category', publicCategoryRouters(this.container.categoryController));
     }
 
     public async run(): Promise<void> {
